feat: replace the bloated spring boot with jdbi